--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -14,7 +14,7 @@
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [],
+            "polyfills": ["src/polyfills.ts"]],
             "tsConfig": "tsconfig.json",
             "assets": [],
             "styles": ["src/styles.css"],
